# visCOT

./: .gitignore  LICENSE  Makefile  README.md  a0.py  flow.py  lex.py  main.py  parser.out  parsetab.py  pyproject.toml  test.txt  visualize.py  yacc.py  テスト.txt
.github/workflows/: ci.yml
src/: Makefile  flow.py  lex.py  visualize.py  yacc.py
src/viscot/: __init__.py  cli.py
src/viscot/core/: __init__.py  canvas.py  config.py  lexer.py  nodes.py  parser.py
src/viscot/evaluation/: __init__.py  benchmark.py  comparison.py  report.py
src/viscot/layout/: __init__.py  occupation.py  optimizer.py
src/viscot/metrics/: __init__.py  composite.py  overlap.py  sampling.py  smoothness.py  spacing.py
src/visualize/: __init__.py  flow.py  lex.py  yacc.py
tests/: conftest.py  test_canvas.py  test_layout.py  test_metrics.py  test_nodes.py  test_parser.py
