[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viscot"
version = "0.2.0"
description = "Visualization of tree representation of structurally stable incompressible flows"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "ply>=3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.5",
    "ruff>=0.1",
]
eval = [
    "pandas>=2.0",
]

[project.scripts]
viscot = "viscot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["ply", "ply.*", "scipy", "scipy.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
# PLY requires t_XXX and p_xxx naming conventions
"src/viscot/core/lexer.py" = ["N816"]
"src/viscot/core/parser.py" = ["N802", "N816"]
# Node class names mirror COT notation (B0_plus, C_minus, etc.)
# B027: plot_arrow is intentionally a no-op default, not abstract
"src/viscot/core/nodes.py" = ["N801", "B027"]

[tool.pytest.ini_options]
testpaths = ["tests"]
